# cloudops-autopilot

./: .env.example  .gitignore  Project2_Docs  README.md  pyproject.toml
agents/: __init__.py
agents/analysis/: __init__.py  agent.py
agents/audit/: __init__.py  agent.py
agents/decision/: __init__.py  agent.py
agents/execution/: __init__.py  agent.py
agents/executive/: __init__.py  agent.py
agents/finops/: __init__.py  agent.py
agents/orchestrator/: __init__.py  orchestrator.py
agents/policy/: __init__.py  agent.py
agents/shared/: __init__.py  action_plan.py  adk_adapter.py  base_agent.py  context.py  enums.py  logger.py  message.py  registry.py  scenarios.py  trace.py
agents/telemetry/: __init__.py  agent.py
agents/verification/: __init__.py  agent.py
backend/app/: database.py  main.py  seed.py  verify_full_release.py  verify_pipeline.py
cloud_adapter/: __init__.py  interface.py  live_client.py  mock_client.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
mcp_server/: __init__.py  exceptions.py  metadata.py  server.py
shared/: config.py
shared/schemas/: __init__.py  resources.py  telemetry.py
tests/: conftest.py  test_adapter.py  test_agents.py  test_collaboration.py  test_database.py  test_executive_orchestrator.py  test_live_adapter.py  test_mcp.py  test_reasoning_paths.py  test_sequential_workflow.py  test_workflow.py
(+64 files in other folders)
